--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "r_oe17_chat_app",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "startbootstrap-sb-admin-2": "^4.0.3",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
