--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ yarn-debug.log*
 
 .vscode
 **/.DS_Store
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
